Updated edits for the Data Models page. Fixed order of images displayed in overlay. Added fornt for scrollbar of quasar table.

--- a/src/app/component/DataModel/dataModel.component.scss
+++ b/src/app/component/DataModel/dataModel.component.scss
@@ -1,8 +1,5 @@
-.router-outlet + *{
-    width: 900px;
-}
-
 .router{
+    width: 900px;
     position: absolute;
     vertical-align: top;
     margin-left: 500px;
