--- a/src/app/component/QuasarTable/quasarTable.component.scss
+++ b/src/app/component/QuasarTable/quasarTable.component.scss
@@ -121,6 +121,24 @@ table{
     height: 880px;
 }
 
+.q-table::-webkit-scrollbar-track{
+    border: 0.0625em solid #000;
+    padding: 0.125em 0;
+    background-color: white;
+    border-radius: 0.625em;
+}
+
+.q-table::-webkit-scrollbar{
+    width: 0.625em;
+}
+
+.q-table::-webkit-scrollbar-thumb{
+    box-shadow: inset 0 0 0.375em rgba(0,0,0,.3);
+    background-color: #D9D9D9;
+    border: 0.0625em solid #000;
+    border-radius: 0.625em;
+}
+
 .error-alert{
     bottom: 100%;
     margin-left: 100px;
